Sign in frontend done - tried my best 🥺

--- a/frontend/src/components/SignIn/SignIn.module.css
+++ b/frontend/src/components/SignIn/SignIn.module.css
@@ -1,5 +1,39 @@
+.wrapper {
+  background-image: url(/signinbackground.jpg);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
+}
+
 .formWrapper {
-  height: 100vh;
   display: grid;
   place-items: center;
+}
+
+.footer {
+  margin-top: rem(120px);
+  border-top: rem(1px) solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-5));
+}
+
+.inner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: var(--mantine-spacing-md) var(--mantine-spacing-md);
+
+  @media (max-width: $mantine-breakpoint-sm) {
+    flex-direction: column;
+  }
+}
+
+.links {
+  @media (max-width: $mantine-breakpoint-sm) {
+    margin-top: var(--mantine-spacing-lg);
+    margin-bottom: var(--mantine-spacing-sm);
+  }
+}
+
+.header {
+  padding-top: 100px;
 }
