--- a/frontend/src/components/Goal/Goal.module.css
+++ b/frontend/src/components/Goal/Goal.module.css
@@ -35,13 +35,14 @@
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   max-width: 600px;
-  margin: 0 auto;
+  /*margin: 0 auto;*/
 }
 
 .goalText, .membersText {
   text-align: center;
   font-size: 24px;
 }
+
 .membersPaper {
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -54,7 +55,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  /*height: 100vh;*/
 }
 
 .secondToTopContainer {
@@ -71,12 +72,12 @@
   align-items: flex-start;
 }
 
-.goalsGoalContainer{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-}
+/*.goalsGoalContainer{*/
+/*  display: flex;*/
+/*  justify-content: space-between;*/
+/*  align-items: center;*/
+/*  padding: 10px;*/
+/*}*/
 
 
 .goal{
@@ -84,7 +85,7 @@
   margin: 0 auto;
 }
 
-.link{
+.goalLink{
   text-decoration: none;
   color: #007bff;
   display: inline-block;
