--- a/frontend/src/components/MainContent.module.css
+++ b/frontend/src/components/MainContent.module.css
@@ -8,4 +8,10 @@
 
 .content {
     text-align: center;
+    background-color: lightblue;
+    width: 1000px;
+    padding: 20px;
+    margin: auto;
+    border-radius: 10px;
+    /*box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);*/
 }
