--- a/frontend/src/components/SignIn/SignIn.module.css
+++ b/frontend/src/components/SignIn/SignIn.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 100px;
   min-height: 100vh;
 }
 
@@ -12,8 +13,7 @@
 }
 
 .footer {
-  margin-top: rem(120px);
-  border-top: rem(1px) solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-5));
+  background-color: white;
 }
 
 .inner {
