Finished up the code itself. Linked up an api call that fetches information of each of the top goals retrieved and then fixed up css.

--- a/frontend/src/components/Goal/Goal.module.css
+++ b/frontend/src/components/Goal/Goal.module.css
@@ -32,6 +32,8 @@
 
 .goalPaper {
   padding: 20px;
+  text-align: center;
+  background-color: lightgray;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   max-width: 600px;
