Just pushing what i have for now, testing will be finished in sprint 4

--- a/frontend/src/components/Profile/Profile.module.css
+++ b/frontend/src/components/Profile/Profile.module.css
@@ -15,6 +15,11 @@
     float: left;
 }
 
+.editBio{
+    display: flex;
+    text-align: center;
+}
+
 .goalColumn {
     display: flex;
     flex-direction: column;
