--- a/frontend/src/components/Goal/Goal.module.css
+++ b/frontend/src/components/Goal/Goal.module.css
@@ -55,7 +55,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /*height: 100vh;*/
+  /*margin-top: 100px;*/
+  height: 50vh;
 }
 
 .secondToTopContainer {
@@ -71,14 +72,6 @@
   justify-content: space-around;
   align-items: flex-start;
 }
-
-/*.goalsGoalContainer{*/
-/*  display: flex;*/
-/*  justify-content: space-between;*/
-/*  align-items: center;*/
-/*  padding: 10px;*/
-/*}*/
-
 
 .goal{
   width: 100%;
@@ -98,16 +91,88 @@
   font-size: 24px;
 }
 
+/*comments*/
+.commentsSection {
+  margin-top: 20px;
+  background-color: white;
+  padding: 16px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+}
 
-/*.membersPaper {*/
-/*  padding: 20px;*/
-/*  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
-/*  border-radius: 8px;*/
-/*  max-width: 300px;*/
-/*}*/
+.commentsTitle {
+  font-size: 24px;
+  margin-bottom: 16px;
+}
 
-/*.membersText {*/
-/*  margin-bottom: 10px;*/
-/*  text-align: center;*/
-/*  font-size: 24px;*/
-/*}*/
+.commentsList {
+  max-height: 300px;
+  overflow-y: auto;
+}
+
+.commentGroup {
+  margin-bottom: 16px;
+}
+
+.comment {
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
+  margin-bottom: 16px;
+  background-color: white;
+  border: 1px solid #e0e0e0;
+  border-radius: 8px;
+}
+
+.commentHeader {
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
+}
+
+.avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 12px;
+}
+
+.commentInfo {
+  display: flex;
+  flex-direction: column;
+}
+
+.userName {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.commentDate {
+  font-size: 12px;
+  color: #888;
+}
+
+.commentText {
+  font-size: 14px;
+  margin-top: 8px;
+  text-align: left;
+}
+
+.addComment {
+  display: flex;
+  flex-direction: column;
+  margin-top: 16px;
+}
+
+.commentInput {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #e0e0e0;
+  border-radius: 4px;
+  margin-bottom: 8px;
+}
+
+.commentButton {
+  align-self: flex-end;
+}
