--- a/frontend/src/components/Goal/Goal.module.css
+++ b/frontend/src/components/Goal/Goal.module.css
@@ -5,7 +5,7 @@
   margin-top: 50px;
   margin-left: 50px;
   padding: 100px 50px 424px 50px;
-  background-color: var(--mantine-color-dark-1);
+  background-color: var(--mantine-color-gray-2);
 }
 
 .goalContainer {
@@ -35,7 +35,7 @@
 .goalPaper {
   padding: 20px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
+  border-radius: 16px;
   max-width: 600px;
   /*margin: 0 auto;*/
 }
