--- a/frontend/src/components/Goal/Goal.module.css
+++ b/frontend/src/components/Goal/Goal.module.css
@@ -1,10 +1,8 @@
-.container {
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
-  margin-top: 50px;
-  padding: 100px 50px 100px 50px;
-  background-color: lightblue;
+
+.grayBackground {
+  background-color: var(--mantine-color-gray-2);
+  height: 170vh;
+  width: 100%;
 }
 
 .goalContainer {
