--- a/frontend/src/components/Goal/Goal.module.css
+++ b/frontend/src/components/Goal/Goal.module.css
@@ -3,8 +3,9 @@
   justify-content: space-around;
   align-items: flex-start;
   margin-top: 50px;
-  padding: 100px 50px 100px 50px;
-  background-color: lightblue;
+  margin-left: 50px;
+  padding: 100px 50px 424px 50px;
+  background-color: var(--mantine-color-gray-2);
 }
 
 .goalContainer {
@@ -12,6 +13,7 @@
   justify-content: space-around;
   align-items: flex-start;
   margin-top: 50px;
+  
   padding: 100px 50px;
   background-color: white;
 }
@@ -33,7 +35,7 @@
 .goalPaper {
   padding: 20px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  border-radius: 8px;
+  border-radius: 16px;
   max-width: 600px;
   /*margin: 0 auto;*/
 }
