added functionality to edit name and bio

--- a/frontend/src/components/Profile/Profile.module.css
+++ b/frontend/src/components/Profile/Profile.module.css
@@ -15,9 +15,10 @@
     float: left;
 }
 
-.editBio{
-    display: flex;
-    text-align: center;
+.editButton {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
 }
 
 .goalColumn {
