Add user profile

--- a/frontend/src/components/Goal/Goal.module.css
+++ b/frontend/src/components/Goal/Goal.module.css
@@ -209,3 +209,9 @@
 .close:hover {
   background-color: var(--mantine-color-blue-1);
 }
+
+.removeWrapper {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
